compile_errors.txt
In file included from hash_map.h:153,
                 from mainProj2.cpp:2:
hash_map.hpp: In member function 'void hash_map<K, V>::insert(K, V)':
hash_map.hpp:91:5: error: expected primary-expression before 'else'
   91 |     else if(_size < _lower_load_factor * _capacity)
      |     ^~~~
hash_map.hpp: In member function 'bool hash_map<K, V>::remove(K)':
hash_map.hpp:135:5: error: expected primary-expression before 'else'
  135 |     else if(_size < _lower_load_factor * _capacity)
      |     ^~~~
